--- a/about.html
+++ b/about.html
@@ -1,131 +1,180 @@
+<!DOCTYPE html>
 <html lang="en">
-   <head>
-      <link rel="stylesheet" href="HomePageCSS.css">
-   </head>
+    <head>
+        <link rel="stylesheet" href="HomePageCSS.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0;">
+    </head>
    <body>
-      <div class="header-wraper">
-         <div class="header-title">
-            <a href="https://www.serenitydayspafremont.com/">SERENITY DAY SPA</a>
-         </div>
-         <ul class="header-menu">
-            <li>
-               <a href="index.html">Home</a>
-            </li>
-            <li>
-               <a href="contact.html">Contact</a>
-            </li>
-            <li>
-               <a href="about.html">About</a>
-            </li>
-            <li>
-               <a href="service.html">Service</a>
-            </li>
-            <li>
-               <a href="rate.html">Rates</a>
-            </li>
-            <li>
-               <a href="giftcard.html">GIFT CARD</a>
-            </li>
-            <li>
-               <a href="policy.html">POLICIES</a>
-            </li>
-            <li>
-               <a href="faqs.html">FAQs</a>
-            </li>
-         </ul>
-      </div>
+    <div class="header-wraper">
+        <div class="header-title">
+            <a href="spa.html">SERENITY DAY SPA</a>            
+            <div class="hamburgerMenuContainer">
+                <div class="hamburger"></div>
+            </div>
+            <nav>
+                <ul class="navlinks hide">
+                    <a href="spa.html"><li>Home</li></a>
+                    <a href="rate.html"><li>Rates</li></a>
+                    <a href="service.html"><li>Service</li></a>
+                    <a href="giftcard.html"><li>Gift Card</li></a>
+                    <a href="about.html"><li>About</li></a>
+                    <a href="racontactte.html"><li>Contact</li></a>
+                </ul>
+            </nav>
+        </div>
+        <ul class="header-menu">
+            <a href="spa.html"><li>Home</li></a>
+            <a href="rate.html"><li>Rates</li></a>
+            <a href="service.html"><li>SERVICE</li></a>
+            <a href="giftcard.html"><li>GIFT CARD</li></a>
+            <a href="about.html"><li>ABOUT</li></a>
+            <a href="contact.html"><li>CONTACT</li></a>
+        </ul>
+    </div>
 
       <div class="service__wrapper">
          <div class="service__section">
-            <div class="service__box">
+            <div class="service__box about__box">
                <div class="service__detail">
 				<h2>About Us</h2>
 				<section>
-<p><b>Biography of Suki Zhao</b></p> 
-<p>Suki Zhao, CMT, has been practicing massage therapy for 
-ten years.&nbsp; Suki is a well-known local expert in deep tissue work and sports massage.&nbsp; 
-She is looking forward to serving the Fremont area from her serene 
-surroundings at Serenity Day Spa of Fremont.&nbsp; </p>
-<p>All masseuses at Serenity Day Spa of Fremont are state-
-certified massage or facial technicians and are bilingual (English and 
-Mandarin).</p>
+                    <p><b>Biography of Suki Zhao</b></p> 
+                    <p>Suki Zhao, CMT, has been practicing massage therapy for 
+                    ten years.&nbsp; Suki is a well-known local expert in deep tissue work and sports massage.&nbsp; 
+                    She is looking forward to serving the Fremont area from her serene 
+                    surroundings at Serenity Day Spa of Fremont.&nbsp; </p>
+                    <p>All masseuses at Serenity Day Spa of Fremont are state-
+                    certified massage or facial technicians and are bilingual (English and 
+                    Mandarin).</p>
 
-<p><b>History of Massage Therapy</b></p>
-<p>The practice of massage therapy is over 3000 years old.&nbsp; As 
-far back as 1000 BC the Chinese were using some form of massage to treat 
-paralysis or poor circulation.&nbsp; In 460-375 BC, Hippocrates, the father of modern 
-day medicine, mentioned that "gently rubbing" of a dislocated shoulder helped in 
-healing.&nbsp; The Greeks also used a form of massage in ancient times to prepare 
-athletes for competition since massage was thought to improve circulation and 
-rid the muscles of metabolites after an athletic competition.</p>
-<p>Per Ling of Sweden popularized massage therapy in the 19<sup>th</sup> 
-century in Stockholm, hence arising the modern day term "Swedish massage."&nbsp; 
-In 1917 after World War I, the surgeon-general created 
-rehabilitation programs for wounded soldiers hence massage therapy was born 
-formally in the United States.</p>
-<p>Simply defined, massage therapy is the manipulation of soft 
-tissues (muscle, skin, tendons, and ligaments etc.) and the joints of the body 
-using the hands.&nbsp; Massage therapy has many therapeutic benefits.&nbsp; The muscular, 
-nervous, lymphatic and circulatory systems are influenced directly by the 
-physical movements utilized in massage therapy, not to mention the tremendous 
-benefit of mental relaxation and the reduction in stress experienced during and 
-after a massage.</p>
-</section>
+                    <p><b>History of Massage Therapy</b></p>
+                    <p>The practice of massage therapy is over 3000 years old.&nbsp; As 
+                    far back as 1000 BC the Chinese were using some form of massage to treat 
+                    paralysis or poor circulation.&nbsp; In 460-375 BC, Hippocrates, the father of modern 
+                    day medicine, mentioned that "gently rubbing" of a dislocated shoulder helped in 
+                    healing.&nbsp; The Greeks also used a form of massage in ancient times to prepare 
+                    athletes for competition since massage was thought to improve circulation and 
+                    rid the muscles of metabolites after an athletic competition.</p>
+                    <p>Per Ling of Sweden popularized massage therapy in the 19<sup>th</sup> 
+                    century in Stockholm, hence arising the modern day term "Swedish massage."&nbsp; 
+                    In 1917 after World War I, the surgeon-general created 
+                    rehabilitation programs for wounded soldiers hence massage therapy was born 
+                    formally in the United States.</p>
+                    <p>Simply defined, massage therapy is the manipulation of soft 
+                    tissues (muscle, skin, tendons, and ligaments etc.) and the joints of the body 
+                    using the hands.&nbsp; Massage therapy has many therapeutic benefits.&nbsp; The muscular, 
+                    nervous, lymphatic and circulatory systems are influenced directly by the 
+                    physical movements utilized in massage therapy, not to mention the tremendous 
+                    benefit of mental relaxation and the reduction in stress experienced during and 
+                    after a massage.</p>
+                    </section>
                </div>
             </div>
          </div>
       </div>
-      <div class="site-footer">
-         <div class="container">
+      <div class="service__wrapper">
+        <div class="service__section">
+           <div class="service__box about__box">
+              <div class="service__detail">
+                 <h2>FAQS</h2>
+                 <section>
+                    <p><b>What should I wear to my massage appointment?</b></p>
+                    <p>Wear comfortable clothing. Depending on the treatment you choose, you may or 
+                    may not need to completely disrobe. Your massage therapist will give you privacy 
+                    to undress, and you will be covered with sheets or towels during your treatment.</p>
+                    <p><b>What are your payment policies?</b></p>
+                    <p>We accept payment by cash or credit card (Visa or MasterCard). Local 
+                    regulations require that patrons pay at the time of service. If you would like 
+                    to tip your massage therapist, you are welcome to do so at the end of your 
+                    treatment session.</p>
+                    <p><b>Are your massage oils hypoallergenic?</b></p>
+                    <p>All of the materials we use are designed to minimize allergic reactions.&nbsp; 
+                    If you are highly sensitive, we would be happy to test these items on a small 
+                    patch of skin first, to ensure your comfort. </p>
+                    <p><b>What do I do during a massage therapy treatment?</b></p>
+                    <p>Make yourself comfortable. This is a time for you to relax. If your therapist 
+                    requires you to be in a specific position, she will let you know.</p>
+                 </section>
+              </div>
+           </div>
+        </div>
+     </div>
+     <div class="service__wrapper">
+        <div class="service__section">
+           <div class="service__box about__box">
+              <div class="service__detail">
+               <h2>Policy</h2>
+               <section>
+                   <p>We accept payment by cash or 
+                   credit card (Visa or MasterCard). 
+                   Local regulations require that 
+                   patrons pay at the time of service. 
+                   If you would like to tip your 
+                   massage therapist, you are welcome 
+                   to do so at the end of your 
+                   treatment session.</p>
+                   <p>If you have scheduled an 
+                   appointment and need to cancel or 
+                   reschedule, please give us at least 
+                   4 hours notice. This will allow us 
+                   to serve other customers during that 
+                   time.</p>
+                   <p>We do not have daycare 
+                   facilities. Please make other 
+                   arrangements for your children so 
+                   that you can fully enjoy your 
+                   relaxing time with us.</p>
+                   <p>Please arrive 5-10 minutes ahead 
+                   of your scheduled appointment time.</p>
+                   <p><span style="font-size:9.5pt">We 
+                   reserve the right to refuse service 
+                   to anyone for inappropriate conduct 
+                   or behavior.</span></p>
+                   <p>No refunds will be issued after the treatment
+                   has started.&nbsp; However, we are more 
+                   than happy to change your masseuse 
+                   during the first 15 minutes of your 
+                   massage if you are not completely 
+                   satisfied.</p>
+               </section>
+              </div>
+           </div>
+        </div>
+     </div>
+     <div class="site-footer">
+        <div class="container">
             <div class="row">
-               <div class="footer-info">
-                  <h6>Quick Links</h6>
-                  <div class="footer-links">
-                     <div><a href="">About Us</a></div>
-                     <div><a href="">Contact Us</a></div>
-                     <div><a href="">Policies</a></div>
-                     <div><a href="">FAQs</a></div>
-                     <div><a href="">Get Directions</a></div>
-                  </div>
-               </div>
-               <div class="footer-info">
-                  <h6>Quick Links</h6>
-                  <div class="footer-links">
-                     <div><a href="">About Us</a></div>
-                     <div><a href="">Contact Us</a></div>
-                     <div><a href="">Policies</a></div>
-                     <div><a href="">FAQs</a></div>
-                     <div><a href="">Get Directions</a></div>
-                  </div>
-               </div>
-               <div class="footer-info">
-                  <h6>Quick Links</h6>
-                  <div class="footer-links">
-                     <div><a href="">About Us</a></div>
-                     <div><a href="">Contact Us</a></div>
-                     <div><a href="">Policies</a></div>
-                     <div><a href="">FAQs</a></div>
-                     <div><a href="">Get Directions</a></div>
-                  </div>
-               </div>
-               <div class="footer-info">
-                  <h6>Quick Links</h6>
-                  <div class="footer-links">
-                     <div><a href="">About Us</a></div>
-                     <div><a href="">Contact Us</a></div>
-                     <div><a href="">Policies</a></div>
-                     <div><a href="">FAQs</a></div>
-                     <div><a href="">Get Directions</a></div>
-                  </div>
-               </div>
+                <div class="footer-info">
+                    <h6>Quick Links</h6>
+                    <div class="footer-links">
+                    <div><a href="spa.html">Home</a></div>
+                    <div><a href="about.html">About</a></div>
+                    <div><a href="contact.html">Contact</a></div>
+                    <div><a href="service.html">Service</a></div>
+                    </div>
+                </div>
+                <div class="footer-info">
+                    <h6>Gift Card</h6>
+                    <div class="footer-links">
+                    <div><a href="rate.html">Rates</a></div>
+                    <div><a href="giftcard.html">Buy Digital Gift Card</a></div>
+                    </div>
+                </div>
+                <div class="footer-info">
+                    <h6>More</h6>
+                    <div class="footer-links">
+                        <div><a target="_blank" href="https://www.yelp.com/biz/serenity-day-spa-of-fremont-fremont">Find us on Yelp</a></div>
+                    </div>
+                </div>
             </div>
-         </div>
-         <div class="container">
+        </div>
+        <div class="container">
             <div class="row">
-               <p class="copyright-text">Copyright &copy; 2007-2021 Serenity Day Spa of Fremont
-               </p>
+            <p class="copyright-text">Copyright &copy; 2022 Serenity Day Spa of Fremont
+            </p>
             </div>
-         </div>
-      </div>
+        </div>
+    </div>
+    <script src="BurgerMenu.js"></script>
    </body>
 </html>
