--- a/contact.html
+++ b/contact.html
@@ -1,62 +1,55 @@
 <html lang="en">
-   <head>
-      <link rel="stylesheet" href="HomePageCSS.css">
-   </head>
-   <body>
-      <div class="header-wraper">
-         <div class="header-title">
-            <a href="https://www.serenitydayspafremont.com/">SERENITY DAY SPA</a>
-         </div>
-         <ul class="header-menu">
-            <li>
-               <a href="index.html">Home</a>
-            </li>
-            <li>
-               <a href="contact.html">Contact</a>
-            </li>
-            <li>
-               <a href="about.html">About</a>
-            </li>
-            <li>
-               <a href="service.html">Service</a>
-            </li>
-            <li>
-               <a href="rate.html">Rates</a>
-            </li>
-            <li>
-               <a href="giftcard.html">GIFT CARD</a>
-            </li>
-            <li>
-               <a href="policy.html">POLICIES</a>
-            </li>
-            <li>
-               <a href="faqs.html">FAQs</a>
-            </li>
-         </ul>
-      </div>
+    <head>
+        <link rel="stylesheet" href="HomePageCSS.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0;">
+    </head>
+    <body>
+        <div class="header-wraper">
+            <div class="header-title">
+                <a href="spa.html">SERENITY DAY SPA</a>
+                <div class="hamburgerMenuContainer">
+					<div class="hamburger"></div>
+				</div>
+				<nav>
+                    <ul class="navlinks hide">
+                        <a href="spa.html"><li>Home</li></a>
+                        <a href="rate.html"><li>Rates</li></a>
+                        <a href="service.html"><li>Service</li></a>
+                        <a href="giftcard.html"><li>Gift Card</li></a>
+                        <a href="about.html"><li>About</li></a>
+                        <a href="racontactte.html"><li>Contact</li></a>
+                    </ul>
+				</nav>
+            </div>
+            <ul class="header-menu">
+                <a href="spa.html"><li>Home</li></a>
+                <a href="rate.html"><li>Rates</li></a>
+                <a href="service.html"><li>SERVICE</li></a>
+                <a href="giftcard.html"><li>GIFT CARD</li></a>
+                <a href="about.html"><li>ABOUT</li></a>
+                <a href="contact.html"><li>CONTACT</li></a>
+            </ul>
+        </div>
 
       <div class="service__wrapper">
          <div class="service__section">
-            <div class="service__box">
+            <div class="service__box map__box">
                <div class="service__detail">
 				<h2>Location</h2>
 				<section>
 					<tr>
 						<td>
-<p>43056 Christy St.<br>
-Fremont, CA 94538<br>
-510.979.1888</p>
+                            <p>43056 Christy St.<br>
+                            Fremont, CA 94538<br>
+                            510.979.1888</p>
 						<p>
-						
-						
-
-<a href="mailto:contactserenity@serenityspafremont.com?subject=e-mail from Serenity Day Spa website" title="Send e-mail">Send e-mail.</a>
-						</p>
-<p>[<a target="_blank" href="https://www.google.com/maps/place/43056+Christy+St,+Fremont,+CA+94538">Interactive 
-map on Google</a>]</p>
-<p>
-<a target="_blank" href="https://www.google.com/maps/place/43056+Christy+St,+Fremont,+CA+94538/">
-<img border="1" src="http://www.serenityspafremont.com/images/map.gif" width="496" height="448"></a></p>
+                        <a href="mailto:contactserenity@serenityspafremont.com?subject=e-mail from Serenity Day Spa website" title="Send e-mail">Send e-mail.</a>
+                                                </p>
+                        <p>[<a target="_blank" href="https://www.google.com/maps/place/43056+Christy+St,+Fremont,+CA+94538">Interactive 
+                        map on Google</a>]</p>
+                        <p>
+                        <a target="_blank" href="https://www.google.com/maps/place/43056+Christy+St,+Fremont,+CA+94538/">
+                        <img class="location__map" src="http://www.serenityspafremont.com/images/map.gif"></a></p>
 						</td>
 					</tr>
 				</section>
@@ -65,56 +58,39 @@ map on Google</a>]</p>
          </div>
       </div>
       <div class="site-footer">
-         <div class="container">
+        <div class="container">
             <div class="row">
-               <div class="footer-info">
-                  <h6>Quick Links</h6>
-                  <div class="footer-links">
-                     <div><a href="">About Us</a></div>
-                     <div><a href="">Contact Us</a></div>
-                     <div><a href="">Policies</a></div>
-                     <div><a href="">FAQs</a></div>
-                     <div><a href="">Get Directions</a></div>
-                  </div>
-               </div>
-               <div class="footer-info">
-                  <h6>Quick Links</h6>
-                  <div class="footer-links">
-                     <div><a href="">About Us</a></div>
-                     <div><a href="">Contact Us</a></div>
-                     <div><a href="">Policies</a></div>
-                     <div><a href="">FAQs</a></div>
-                     <div><a href="">Get Directions</a></div>
-                  </div>
-               </div>
-               <div class="footer-info">
-                  <h6>Quick Links</h6>
-                  <div class="footer-links">
-                     <div><a href="">About Us</a></div>
-                     <div><a href="">Contact Us</a></div>
-                     <div><a href="">Policies</a></div>
-                     <div><a href="">FAQs</a></div>
-                     <div><a href="">Get Directions</a></div>
-                  </div>
-               </div>
-               <div class="footer-info">
-                  <h6>Quick Links</h6>
-                  <div class="footer-links">
-                     <div><a href="">About Us</a></div>
-                     <div><a href="">Contact Us</a></div>
-                     <div><a href="">Policies</a></div>
-                     <div><a href="">FAQs</a></div>
-                     <div><a href="">Get Directions</a></div>
-                  </div>
-               </div>
+                <div class="footer-info">
+                    <h6>Quick Links</h6>
+                    <div class="footer-links">
+                    <div><a href="spa.html">Home</a></div>
+                    <div><a href="about.html">About</a></div>
+                    <div><a href="contact.html">Contact</a></div>
+                    <div><a href="service.html">Service</a></div>
+                    </div>
+                </div>
+                <div class="footer-info">
+                    <h6>Gift Card</h6>
+                    <div class="footer-links">
+                    <div><a href="rate.html">Rates</a></div>
+                    <div><a href="giftcard.html">Buy Digital Gift Card</a></div>
+                    </div>
+                </div>
+                <div class="footer-info">
+                    <h6>More</h6>
+                    <div class="footer-links">
+                        <div><a href="https://www.yelp.com/biz/serenity-day-spa-of-fremont-fremont">Find us on Yelp</a></div>
+                    </div>
+                </div>
             </div>
-         </div>
-         <div class="container">
+        </div>
+        <div class="container">
             <div class="row">
-               <p class="copyright-text">Copyright &copy; 2007-2021 Serenity Day Spa of Fremont
-               </p>
+            <p class="copyright-text">Copyright &copy; 2022 Serenity Day Spa of Fremont
+            </p>
             </div>
-         </div>
-      </div>
+        </div>
+    </div>
+      <script src="BurgerMenu.js"></script>
    </body>
 </html>
