--- a/rate.html
+++ b/rate.html
@@ -1,48 +1,44 @@
 <html lang="en">
-   <head>
-      <link rel="stylesheet" href="HomePageCSS.css">
-   </head>
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0;">
+    </head>
    <body>
-      <div class="header-wraper">
-         <div class="header-title">
-            <a href="https://www.serenitydayspafremont.com/">SERENITY DAY SPA</a>
-         </div>
-         <ul class="header-menu">
-            <li>
-               <a href="index.html">Home</a>
-            </li>
-            <li>
-               <a href="contact.html">Contact</a>
-            </li>
-            <li>
-               <a href="about.html">About</a>
-            </li>
-            <li>
-               <a href="service.html">Service</a>
-            </li>
-            <li>
-               <a href="rate.html">Rates</a>
-            </li>
-            <li>
-               <a href="giftcard.html">GIFT CARD</a>
-            </li>
-            <li>
-               <a href="policy.html">POLICIES</a>
-            </li>
-            <li>
-               <a href="faqs.html">FAQs</a>
-            </li>
-         </ul>
-      </div>
+    <div class="header-wraper">
+        <div class="header-title">
+            <a href="spa.html">SERENITY DAY SPA</a>            
+            <div class="hamburgerMenuContainer">
+                <div class="hamburger"></div>
+            </div>
+            <nav>
+                <ul class="navlinks hide">
+					<a href="spa.html"><li>Home</li></a>
+					<a href="rate.html"><li>Rates</li></a>
+					<a href="service.html"><li>Service</li></a>
+					<a href="giftcard.html"><li>Gift Card</li></a>
+					<a href="about.html"><li>About</li></a>
+					<a href="racontactte.html"><li>Contact</li></a>
+                </ul>
+            </nav>
+        </div>
+        <ul class="header-menu">
+			<a href="spa.html"><li>Home</li></a>
+			<a href="rate.html"><li>Rates</li></a>
+			<a href="service.html"><li>SERVICE</li></a>
+			<a href="giftcard.html"><li>GIFT CARD</li></a>
+			<a href="about.html"><li>ABOUT</li></a>
+			<a href="contact.html"><li>CONTACT</li></a>
+        </ul>
+    </div>
 
       <div class="service__wrapper">
          <div class="service__section">
-            <div class="service__box">
+            <div class="service__box rate__box">
                <div class="service__detail">
 				<h2>Rate</h2>
 				<section>
 					<td>
-						<table border="1" cellpadding="5" cellspacing="0" id="table340">
+						<table cellpadding="5" cellspacing="0" id="table340">
 							<tbody>
 								<tr>
 									<td>
@@ -254,16 +250,16 @@
 							<li>Full 100-min Sea Salt Scrub massage</li>
 							<li>Includes Orange Oil and Orange Salt and body mud addons</li>
 							<li>May also be purchased as a gift card for future use</li>
-							<li>Only $139/100 min<i> </i></li>
+							<li>Only $139/100 min</li>
 						</ul>
 
-						<p><i>Ultrasonic Facial Package</i></p>
+						<p>Ultrasonic Facial Package</p>
 
 						<ul>
-							<li><i>Ultrasonic facial, involving deep cleansing, exfoliation, blackhead removal, vapor spray, and eyebrow shaping</i></li>
-							<li><i>Face and neck massage</i></li>
-							<li><i>Bonus! Exfoliating and hydrating baby feet treatment</i></li>
-							<li><i>Only $115/75 minutes, save 28%!</i></li>
+							<li>Ultrasonic facial, involving deep cleansing, exfoliation, blackhead removal, vapor spray, and eyebrow shaping</li>
+							<li>Face and neck massage</li>
+							<li>Bonus! Exfoliating and hydrating baby feet treatment</li>
+							<li>Only $115/75 minutes, save 28%!</li>
 						</ul>
 						</td>
 				</section>
@@ -272,56 +268,39 @@
          </div>
       </div>
       <div class="site-footer">
-         <div class="container">
+        <div class="container">
             <div class="row">
-               <div class="footer-info">
-                  <h6>Quick Links</h6>
-                  <div class="footer-links">
-                     <div><a href="">About Us</a></div>
-                     <div><a href="">Contact Us</a></div>
-                     <div><a href="">Policies</a></div>
-                     <div><a href="">FAQs</a></div>
-                     <div><a href="">Get Directions</a></div>
-                  </div>
-               </div>
-               <div class="footer-info">
-                  <h6>Quick Links</h6>
-                  <div class="footer-links">
-                     <div><a href="">About Us</a></div>
-                     <div><a href="">Contact Us</a></div>
-                     <div><a href="">Policies</a></div>
-                     <div><a href="">FAQs</a></div>
-                     <div><a href="">Get Directions</a></div>
-                  </div>
-               </div>
-               <div class="footer-info">
-                  <h6>Quick Links</h6>
-                  <div class="footer-links">
-                     <div><a href="">About Us</a></div>
-                     <div><a href="">Contact Us</a></div>
-                     <div><a href="">Policies</a></div>
-                     <div><a href="">FAQs</a></div>
-                     <div><a href="">Get Directions</a></div>
-                  </div>
-               </div>
-               <div class="footer-info">
-                  <h6>Quick Links</h6>
-                  <div class="footer-links">
-                     <div><a href="">About Us</a></div>
-                     <div><a href="">Contact Us</a></div>
-                     <div><a href="">Policies</a></div>
-                     <div><a href="">FAQs</a></div>
-                     <div><a href="">Get Directions</a></div>
-                  </div>
-               </div>
+                <div class="footer-info">
+                    <h6>Quick Links</h6>
+                    <div class="footer-links">
+                    <div><a href="spa.html">Home</a></div>
+                    <div><a href="about.html">About</a></div>
+                    <div><a href="contact.html">Contact</a></div>
+                    <div><a href="service.html">Service</a></div>
+                    </div>
+                </div>
+                <div class="footer-info">
+                    <h6>Gift Card</h6>
+                    <div class="footer-links">
+                    <div><a href="rate.html">Rates</a></div>
+                    <div><a href="giftcard.html">Buy Digital Gift Card</a></div>
+                    </div>
+                </div>
+                <div class="footer-info">
+                    <h6>More</h6>
+                    <div class="footer-links">
+                        <div><a target="_blank" href="https://www.yelp.com/biz/serenity-day-spa-of-fremont-fremont">Find us on Yelp</a></div>
+                    </div>
+                </div>
             </div>
-         </div>
-         <div class="container">
+        </div>
+        <div class="container">
             <div class="row">
-               <p class="copyright-text">Copyright &copy; 2007-2021 Serenity Day Spa of Fremont
-               </p>
+            <p class="copyright-text">Copyright &copy; 2022 Serenity Day Spa of Fremont
+            </p>
             </div>
-         </div>
-      </div>
+        </div>
+        </div>
+        <script src="BurgerMenu.js"></script>
    </body>
 </html>
