--- a/service.html
+++ b/service.html
@@ -8,13 +8,13 @@
     <body>
         <div class="header-wraper">
             <div class="header-title">
-                <a href="spa.html">SERENITY DAY SPA</a>
+                <a href="index.html">SERENITY DAY SPA</a>
                 <div class="hamburgerMenuContainer">
 					<div class="hamburger"></div>
 				</div>
 				<nav>
                     <ul class="navlinks hide">
-                     <a href="spa.html"><li>Home</li></a>
+                     <a href="index.html"><li>Home</li></a>
                      <a href="rate.html"><li>Rates</li></a>
                      <a href="service.html"><li>Service</li></a>
                      <a href="giftcard.html"><li>Gift Card</li></a>
@@ -24,7 +24,7 @@
 				</nav>
             </div>
             <ul class="header-menu">
-               <a href="spa.html"><li>Home</li></a>
+               <a href="index.html"><li>Home</li></a>
                <a href="rate.html"><li>Rates</li></a>
                <a href="service.html"><li>SERVICE</li></a>
                <a href="giftcard.html"><li>GIFT CARD</li></a>
@@ -175,7 +175,7 @@
                     <div class="footer-info">
                         <h6>Quick Links</h6>
                         <div class="footer-links">
-                           <div><a href="spa.html">Home</a></div>
+                           <div><a href="index.html">Home</a></div>
                         <div><a href="about.html">About</a></div>
                         <div><a href="contact.html">Contact</a></div>
                         <div><a href="service.html">Service</a></div>
