--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="HomePageCSS.css">
+        <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0;">
     </head>
    <body>
@@ -175,6 +175,6 @@
             </div>
         </div>
     </div>
-    <script src="BurgerMenu.js"></script>
+    <script src="burgerMenu.js"></script>
    </body>
 </html>
