--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 </div>
             </div>
         </div>
-        <script src="Carousel.js"></script>
-        <script src="BurgerMenu.js"></script>
+        <script src="carousel.js"></script>
+        <script src="burgerMenu.js"></script>
     </body>
 </html>
