--- a/rate.html
+++ b/rate.html
@@ -301,6 +301,6 @@
             </div>
         </div>
         </div>
-        <script src="BurgerMenu.js"></script>
+        <script src="burgerMenu.js"></script>
    </body>
 </html>
