--- a/service.html
+++ b/service.html
@@ -203,6 +203,6 @@
                 </div>
             </div>
         </div>
-        <script src="BurgerMenu.js"></script>
+        <script src="burgerMenu.js"></script>
     </body>
 </html>    
